fixed the search bar spacing and began cleaning up code

--- a/web2py/applications/hw4/static/css/myapp.css
+++ b/web2py/applications/hw4/static/css/myapp.css
@@ -126,9 +126,3 @@
     width: 800px;
     margin-bottom: 20px;
 }
-
-.top-search-bar {
-    border: 1px solid black;
-    width: 800px;
-    margin-bottom: 20px;
-}
